kubernetes/apps/external-services/home-assistant/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: external-services
subsets:
  - addresses:
      - ip: 10.69.10.12
    ports:
      - name: http
        port: 8123
        protocol: TCP
