kubernetes/apps/external-services/home-assistant/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: external-services
spec:
  selector:
    app.kubernetes.io/name: home-assistant
  ports:
    - name: http
      protocol: TCP
      port: 8123
  externalIPs:
    - 10.69.10.12
