kubernetes/apps/external-services/home-assistant/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: external-services
  annotations:
    external-dns.home.arpa/enabled: true
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx
  tls:
    - secretName: tls.home-assistant
      hosts:
        - "hass.${SECRET_DOMAIN}"

  rules:
    - host: hass.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  name: http
